--- a/oship/src/oship/locales/ms/LC_MESSAGES/oship-ms.po
+++ b/oship/src/oship/locales/ms/LC_MESSAGES/oship-ms.po
@@ -1,18 +1,53 @@
-#, fuzzy
+# Malay translation for oship
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the oship package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Development/Unknown\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: oship\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-03-26 13:09+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Zope 3 Developers <zope3-dev@zope.org>\n"
+"PO-Revision-Date: 2009-03-23 04:16+0000\n"
+"Last-Translator: nawawi <Unknown>\n"
+"Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-05-12 12:40+0000\n"
+"X-Launchpad-Export-Date: 2009-05-12 12:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
-"Generated-By: zope/app/locales/extract.py\n"
+
+#: src/oship/openehr/archetype.py:1070
+msgid "Standard form of constraint."
+msgstr "Bentuk piawai bagi kekangan"
+
+#: src/oship/openehr/archetype.py:1092
+msgid "Cardinality of this attribute constraint."
+msgstr "Kekardinalan bagi kekangan sifat"
+
+#: src/oship/openehr/archetype.py:1136
+msgid "Reference"
+msgstr "Rujukan"
+
+#: src/oship/openehr/archetype.py:1155
+msgid "Default Value"
+msgstr "Nilai tersedia"
+
+#: src/oship/openehr/archetype.py:1156
+msgid "A default value for this constraint object."
+msgstr "Satu nilai tersedia untuk objek kekangan."
+
+#: src/oship/openehr/archetype.py:1161
+msgid "Has Assumed Value"
+msgstr "Telah mempunyai Nilai"
+
+#: src/oship/openehr/archetype.py:1162
+msgid "True if there is an assumed value."
+msgstr "Benar jika terdapat nilai."
+
+#: src/oship/openehr/archetype.py:119
+msgid "List of all constraint codes in this archetype."
+msgstr "Kod-kod Kekangan"
 
 #: src/oship/msw/createmsw.py:101
 msgid "Family"
@@ -195,40 +230,12 @@ msgstr ""
 msgid "Standard Equivalent"
 msgstr ""
 
-#: src/oship/openehr/archetype.py:1070
-msgid "Standard form of constraint."
-msgstr ""
-
 #: src/oship/openehr/archetype.py:1091
 msgid "Cardinality"
 msgstr ""
 
-#: src/oship/openehr/archetype.py:1092
-msgid "Cardinality of this attribute constraint."
-msgstr ""
-
-#: src/oship/openehr/archetype.py:1136
-msgid "Reference"
-msgstr ""
-
 #: src/oship/openehr/archetype.py:1137
 msgid "Reference to a constraint in the archetype ontology."
-msgstr ""
-
-#: src/oship/openehr/archetype.py:1155
-msgid "Default Value"
-msgstr ""
-
-#: src/oship/openehr/archetype.py:1156
-msgid "A default value for this constraint object."
-msgstr ""
-
-#: src/oship/openehr/archetype.py:1161
-msgid "Has Assumed Value"
-msgstr ""
-
-#: src/oship/openehr/archetype.py:1162
-msgid "True if there is an assumed value."
 msgstr ""
 
 #: src/oship/openehr/archetype.py:118
@@ -237,10 +244,6 @@ msgstr ""
 
 #: src/oship/openehr/archetype.py:1183
 msgid "True if any value of the type being constrained is allowed."
-msgstr ""
-
-#: src/oship/openehr/archetype.py:119
-msgid "List of all constraint codes in this archetype."
 msgstr ""
 
 #: src/oship/openehr/archetype.py:1190
